--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "build": "./distribution/build"
   },
   "scripts": {
-    "test": "istanbul cover node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js",
-    "coverage": "istanbul cover --report cobertura node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js && mocha test/*_test.js test/api/*_test.js --reporter mocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
+    "test": "nyc mocha test/*_test.js test/api/*_test.js --exit",
+    "coverage": "nyc --reporter=cobertura --reporter=text mocha test/*_test.js test/api/*_test.js --reporter mocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
     "start": "node server.js",
-    "clean:build": "node_modules/.bin/rimraf $npm_package_config_distribution",
-    "create:build": "node_modules/.bin/mkdirp $npm_package_config_build",
+    "clean:build": "rimraf $npm_package_config_distribution",
+    "create:build": "mkdirp $npm_package_config_build",
     "clean": "npm run clean:build && npm run create:build && rimraf npm-debug.log",
     "precopy": "echo Copying $npm_package_config_service v\"$npm_package_version\" codebase to build folder",
     "copy": "cp -R -L  ./node_modules ./public ./*.json ./helpers ./api ./test ./scripts ./*.js  $npm_package_config_build",
     "build": "npm run clean",
     "prepackage": "echo Packaging $npm_package_config_service v\"$npm_package_version\" service",
     "package": " npm run build && npm run copy",
-    "postpackage": "cd $npm_package_config_build && zip -r ../$npm_package_config_service_short-\"$npm_package_version\".zip . && cd ../.. && node_modules/.bin/rimraf $npm_package_config_build",
+    "postpackage": "cd $npm_package_config_build && zip -r ../$npm_package_config_service_short-\"$npm_package_version\".zip . && cd ../.. && rimraf $npm_package_config_build",
     "predist": "echo Preparing to package $npm_package_config_service v\"$npm_package_version\" service",
     "dist": "npm run build && npm run package",
     "postdist": "echo Successfully packaged $npm_package_config_service v\"$npm_package_version\" service"
@@ -33,37 +33,37 @@
   },
   "contributors": [
     "Ian Crosby <ian.daniel.crosby@gmail.com>",
-    "Carlos León <mail@carlosleon.info> (carlosleon.info)", 
+    "Carlos León <mail@carlosleon.info> (carlosleon.info)",
     "Gourav SHah <gouravshah@initcron.org>"
   ],
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.2",
-    "body-parser": "^1.15.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "finalhandler": "^0.4.1",
-    "request": "^2.72.0",
-    "serve-static": "^1.10.2",
-    "prom-client": "^6.3.0",
-    "morgan": "^1.7.0",
-    "connect-redis": "3.2.0"
+    "async": "^3.2.5",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "connect-redis": "^7.1.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "finalhandler": "^1.2.0",
+    "morgan": "^1.10.0",
+    "prom-client": "^15.1.0",
+    "redis": "^4.7.1",
+    "serve-static": "^1.16.2"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "sinon": "^1.17.5",
-    "mocha": "^3.0.0",
-    "mocha-junit-reporter": "^1.12.1",
-    "istanbul": "^0.4.4",
-    "mongodb": "^2.2.5",
-    "copyfiles": "1.2.x",
-    "expect.js": "0.x.x",
-    "faker": "4.1.x",
-    "mkdirp": "0.5.x",
-    "mocha": "2.5.x",
-    "rimraf": "2.6.x",
-    "should": "13.1.x"
+    "@faker-js/faker": "^9.0.0",
+    "chai": "^4.4.1",
+    "chai-http": "^4.4.0",
+    "copyfiles": "^2.4.1",
+    "expect.js": "^0.3.1",
+    "mkdirp": "^3.0.1",
+    "mocha": "^10.7.0",
+    "mocha-junit-reporter": "^2.2.1",
+    "mongodb": "^6.10.0",
+    "nyc": "^17.1.0",
+    "rimraf": "^6.0.1",
+    "should": "^13.2.3",
+    "sinon": "^18.0.0"
   }
 }
